// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vitest generator insourceTests should add the insourceSource option in the vite config 1`] = `
"
/// <reference types=\\"vitest\\" />
      import { defineConfig } from 'vite';
      import react from '@vitejs/plugin-react';
      import viteTsConfigPaths from 'vite-tsconfig-paths';
      
      
      export default defineConfig({
        
        plugins: [
          
          react(),
          viteTsConfigPaths({
            root: '../../',
          }),
        ],
        
        define: {
    'import.meta.vitest': undefined
  },
        test: {
    globals: true,
    cache: {
      dir: '../../node_modules/.vitest'
    },
    environment: 'jsdom',
    include: ['src/**/*.{test,spec}.{js,mjs,cjs,ts,mts,cts,jsx,tsx}'],
    includeSource: ['src/**/*.{js,mjs,cjs,ts,mts,cts,jsx,tsx}']
  },
      });"
`;

exports[`vitest generator vite.config should create correct vite.config.ts file for apps 1`] = `
"
/// <reference types=\\"vitest\\" />
      import { defineConfig } from 'vite';
      import react from '@vitejs/plugin-react';
      import viteTsConfigPaths from 'vite-tsconfig-paths';
      
      
      export default defineConfig({
        
        plugins: [
          
          react(),
          viteTsConfigPaths({
            root: '../../',
          }),
        ],
        
        
        test: {
    globals: true,
    cache: {
      dir: '../../node_modules/.vitest'
    },
    environment: 'jsdom',
    include: ['src/**/*.{test,spec}.{js,mjs,cjs,ts,mts,cts,jsx,tsx}'],
    
  },
      });"
`;

exports[`vitest generator vite.config should create correct vite.config.ts file for non buildable libs 1`] = `
"
/// <reference types=\\"vitest\\" />
      import { defineConfig } from 'vite';
      import react from '@vitejs/plugin-react';
      import viteTsConfigPaths from 'vite-tsconfig-paths';
      
      
      export default defineConfig({
        
        plugins: [
          
          react(),
          viteTsConfigPaths({
            root: '../../',
          }),
        ],
        
        
        test: {
    globals: true,
    cache: {
      dir: '../../node_modules/.vitest'
    },
    environment: 'jsdom',
    include: ['src/**/*.{test,spec}.{js,mjs,cjs,ts,mts,cts,jsx,tsx}'],
    
  },
      });"
`;
